--- a/aquino-components/index.html
+++ b/aquino-components/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Onyx UI Test </title>
+    <style>
+      * {
+        color: white;
+        background-color: rgb(14, 12, 31);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
